# obsidian-rag

./: .env.example  .gitignore  AGENTS.md  README.md  knowledge_bases.yaml  mcp_servers.yaml  pyproject.toml
docs/: debugging-rag-flow.md  deepagents-core-concepts-guide.md  harness-learning-roadmap.md  mysql-memory-migration-guide.md  obsidian-rag-code-guide.md  rag-roadmap.md  v1-hybrid-search-guide.md  v2-evaluation-guide.md  v3-1-llm-router-guide.md  v3-10-1-agent-console-guide.md  v3-10-2-run-event-streaming-guide.md  v3-10-3-langgraph-advanced-patterns-guide.md  v3-10-production-core-guide.md  v3-11-1-docling-structured-ingestion-guide.md  v3-11-2-chunking-framework-comparison-guide.md  v3-11-3-collection-router-guide.md  v3-11-skill-system-guide.md  v3-12-1-agent-core-streaming-guide.md  v3-12-2-retrieval-reranking-guide.md  v3-12-3-mcp-agent-integration-guide.md  v3-12-4-unified-knowledge-routing-guide.md  v3-12-mcp-integration-guide.md  v3-13-permission-policy-guide.md  v3-14-sandbox-execution-guide.md  v3-15-recovery-hitl-guide.md  v3-16-deepagents-tool-loop-guide.md  v3-17-deepagents-durable-memory-context-guide.md  v3-2-tool-calling-guide.md  v3-3-langgraph-guide.md  v3-4-planner-guide.md  v3-5-planner-executor-guide.md  v3-6-evidence-checker-guide.md  v3-7-context-builder-guide.md  v3-8-1-conversation-compaction-guide.md  v3-8-conversation-memory-guide.md  v3-9-agent-evaluation-guide.md  v3-agentic-rag-guide.md  version-capability-matrix.md
eval_sets/: agent-food-safety.yaml  retrieval-food-safety.yaml
frontend/agent_console/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/snapshots/: README.md
frontend/v3_10_1_agent_console/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
knowledge/: comprehensive_recipe_rag_kb.md  rag_test_food_safety_kb_expanded.md  vueuse_core_rag_kb.md
obsidian_rag/: __init__.py  adaptive_chunking.py  chunking.py  cli.py  config.py  debugging.py  docling_ingestion.py  embeddings.py  llm.py  loaders.py  memory_store.py  parent_retrieval.py  pipeline.py  prompting.py  qdrant_store.py  schema.py  structured_metadata.py
obsidian_rag/console_api/: __init__.py  dependencies.py  routes.py  schemas.py
obsidian_rag/core/: __init__.py  agent-service-tool-registry-guide.md  compaction.py  context.py  llm.py  memory.py  mysql_memory.py  planner.py  schemas.py  tools.py
obsidian_rag/reranking/: __init__.py  models.py  providers.py  retrieval.py  service.py
obsidian_rag/v1/: __init__.py  app.py  dependencies.py  schemas.py
obsidian_rag/v2/: __init__.py  app.py  dependencies.py  schemas.py
scripts/: migrate_sqlite_memory_to_mysql.py  migrate_v3_15_sqlite_to_postgres.py
tests/: test_chunking.py  test_cli.py  test_cli_collections.py  test_config.py  test_debugging.py  test_llm_reasoning_stream.py  test_loaders.py  test_pipeline.py  test_prompting.py  test_qdrant_store.py  test_retrieval.py  test_structured_metadata.py
(+590 files in other folders)
