[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Local v0 RAG pipeline for Obsidian Markdown and PDF notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12,<1.0.0",
    "docling>=2.113.0,<3.0.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "jsonschema>=4.20.0,<5.0.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-classic>=1.0.0,<2.0.0",
    "langchain-openai>=1.4.0,<2.0.0",
    "langchain-text-splitters>=1.1.0,<2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=3.1.0,<4.0.0",
    "llama-index-core>=0.14.0,<0.15.0",
    "mcp>=1.0,<2.0",
    "openai>=1.90.0",
    "pymysql>=1.1.1",
    "psycopg[binary,pool]>=3.3.0,<4.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.14.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.0",
    "langgraph-checkpoint-sqlite>=3.1.0,<4.0.0",
    "pytest>=8.0.0",
]
migration = [
    "langgraph-checkpoint-sqlite>=3.1.0,<4.0.0",
]
rerank = [
    "sentence-transformers>=3.0.0,<6.0.0",
]

[project.scripts]
obsidian-rag = "obsidian_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
